--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav th:fragment="navbarFragment" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="/">우리 다이어리 수정중입니다.</a>
+        <a class="navbar-brand" th:href="@{/}">우리 다이어리 수정중입니다.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,7 +13,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/notice/list}">공지사항</a></li>
-                        <li><a class="dropdown-item" th:href="@{/question/list}">질문게시판</a></li>
+                        <li><a class="dropdown-item" th:href="@{/diary/mylist}">나의 일기 목록</a></li>
                         <li><a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/infor}">개인정보</a></li>
 
 
@@ -24,7 +24,7 @@
                     <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
                 </li>
             </ul>
                 <!-- 🌤️ 날씨 표시 영역 -->
