--- a/src/main/resources/templates/diary/diary_list.html
+++ b/src/main/resources/templates/diary/diary_list.html
@@ -9,7 +9,7 @@
         <p class="text-muted">기록해온 나의 순간들을 다시 만나보세요.</p>
     </div>
     <div class="mood-score-box">
-        <h3>오늘의 기분지수 🧠</h3>
+        <h3>오늘의 기분지수</h3>
         <p th:text="'기분지수: ' + ${mScore} + '점'"></p>
 
         <p th:if="${mScore} >= 1">🌞 오늘은 좋은 기분이에요!</p>
@@ -21,6 +21,13 @@
         <div class="card-body">
             <h5 class="card-title">😄 내 한 달 평균 기분 지수</h5>
             <p class="card-text fs-3 text-primary fw-bold" th:text="${myMood}">0</p>
+        </div>
+    </div>
+
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">🌍 전체 유저 평균 기분 지수</h5>
+            <p class="card-text fs-3 text-success fw-bold" th:text="${allMood}">0</p>
         </div>
     </div>
 
