메인화면 수정, 로그인 회원가입 로그인상태아이디 등 위치 조정

--- a/src/main/resources/templates/diary/diaryCreate_form.html
+++ b/src/main/resources/templates/diary/diaryCreate_form.html
@@ -89,7 +89,7 @@
 
             switch (selectedWeather) {
                 case '맑음':
-                    weatherMessage = '오늘의 기분은 맑고 화창한 날이네요! ';
+                    weatherMessage = '오늘의 기분은 맑고 화창한 날인가요?! ';
                     break;
                 case '흐림':
                     weatherMessage = '오늘의 기분은 꾸릉꾸릉 이네요. ';
