--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,31 +1,25 @@
 <nav th:fragment="navbarFragment" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">우리 다이어리 수정중입니다.</a>
+        <a class="navbar-brand" th:href="@{/}">날씨로 일기를 작성해 봐요.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" >
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         게시판
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/notice/list}">공지사항</a></li>
+                        <li><a class="dropdown-item" th:href="@{/#}">공지사항</a></li>
                         <li><a class="dropdown-item" th:href="@{/diary/mylist}">나의 일기 목록</a></li>
-                        <li><a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/infor}">개인정보</a></li>
+                        <!--<li><a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/infor}">개인정보</a></li>-->
 
 
                     </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
-                </li>
+
             </ul>
                 <!-- 🌤️ 날씨 표시 영역 -->
                 <!-- ✅ 날씨 미니 위젯 (오른쪽 정렬) -->
@@ -38,13 +32,24 @@
                 <span id="weatherTemp" class="text-muted small" style="display: none;">-- °C</span>
             </div>
         </div>
+
         <span th:if="${#authorization.expression('isAuthenticated')}"
               th:text="${#authentication.principal instanceof T(com.diary.user.SiteUser)
                 ? #authentication.principal.myName
                 : #authentication.name} + ' 님'"
-              style="font-size: 14px; color: #777; transform: translateY(1.8px)"
+              style="font-size: 18px; color: #777; transform: translateY(1.8px)"
               class="px-2">
 </span>
+
+        <div style="font-size: 18px;  margin: 0 15px;">
+            <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+            <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+        </div>
+        <div  style="font-size: 18px">
+            <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+        </div>
+
+
     </div>
 
 </nav>
