--- a/src/main/resources/templates/diary/detail_form.html
+++ b/src/main/resources/templates/diary/detail_form.html
@@ -23,8 +23,9 @@
                     </div>
                     <div class="text-muted small" th:text="${#temporals.format(diary.createDateTime, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
-            </div>
 
+            </div>
+            <a th:href="@{|/diary/modify/${diary.id}|}" class="btn btn-warning btn-sm mt-2">✏️ 수정하기</a>
         </div>
     </div>
 
