--- a/src/main/resources/templates/diary/mypage.html
+++ b/src/main/resources/templates/diary/mypage.html
@@ -36,13 +36,22 @@
                         <h5 class="card-title" th:text="${diary.subject}">제목</h5>
                         <p class="card-text">
                             날짜: <span th:text="${#temporals.format(diary.selectedDate, 'yyyy-MM-dd')}">2025-03-26</span><br/>
-                           나의 날씨: <span th:text="${diary.weather}">맑음</span>
+                            나의 날씨: <span th:text="${diary.weather}">맑음</span>
                         </p>
-                        <a th:href="@{/diary/detail/{id}(id=${diary.id})}" class="btn btn-outline-primary">자세히 보기</a>
+                        <a th:href="@{/diary/detail/{id}(id=${diary.id})}" class="btn btn-outline-primary btn-sm mt-2">자세히 보기</a>
+                        <!-- 여기에 수정 버튼 포함 -->
+
                     </div>
                 </div>
             </div>
+        <div class="d-flex justify-content-between mt-3">
+            <!-- 수정 버튼 -->
+
+
+            <!-- 뒤로가기 버튼 -->
+            <button onclick="history.back()" class="btn btn-secondary btn-sm mt-2">뒤로가기</button>
         </div>
+
 
         <!-- 페이징 -->
         <div class="d-flex justify-content-center mt-4">
