--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -37,7 +37,7 @@
 
     <!-- 네이버 로그인 -->
     <div class="text-center mt-4">
-        <a th:href="@{'/user/naverlogin'}" class="btn btn-outline-success">
+        <a href="/oauth2/authorization/naver">네이버 로그인</a>
             ✅ 네이버로 로그인
         </a>
     </div>
