--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,59 +1,34 @@
 <!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<html lang="ko">
-<link rel="stylesheet" type="text/css" th:href="@{/index.css}">
 <head>
-    <!--Required meta tags-->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,
-    initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-
-
-    <!-- Bootstrap Datepicker CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- ✅ Bootstrap JS (팝업, 드롭다운, 햄버거 기능 작동용) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Bootstrap JS + Datepicker JS -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/locales/bootstrap-datepicker.ko.min.js"></script>
-
-
-
-    <!--Bootatrap CSS-->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>일기장 프로그램</title>
 
+    <!-- ✅ CSS (정적 리소스) -->
+    <link rel="stylesheet" th:href="@{/index.css}">
+    <link rel="stylesheet" th:href="@{/bootstrap.min.css}">
 
+    <!-- ✅ Bootstrap Datepicker CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+
+    <!-- ✅ JS 라이브러리 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/locales/bootstrap-datepicker.ko.min.js"></script>
 </head>
 
-
-
 <body>
+
 <nav th:replace="~{navbar :: navbarFragment}"></nav>
 
-
-
 <th:block layout:fragment="content"></th:block>
-
 <script layout:fragment="script"></script>
-<!--드랍다운 사용-->
-
-<!--자바 스트립트
-<script th:src="@{/mix.js}"></script>
--->
-<!--네비게이션-->
 
 <script>
-    // 전역 함수로 선언되어야 함
     function getWeather(city) {
         $.ajax({
             url: `/weather?location=${city}`,
