--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav th:fragment="navbarFragment" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">날씨로 일기를 작성해 봐요.</a>
+        <a class="navbar-brand" th:href="@{/}">개발자 명찬호 페이지 입니다.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -9,11 +9,12 @@
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        게시판
+                        경력
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/#}">공지사항</a></li>
-                        <li><a class="dropdown-item" th:href="@{/diary/mylist}">나의 일기 목록</a></li>
+                        <li><a class="dropdown-item" th:href="@{/mbti/choose}">mbti 궁합보기</a></li>
+                        <li><a class="dropdown-item" th:href="@{/diary/main}">WeatherDiary 바로가기</a></li>
+                        <li><a class="dropdown-item" href="https://spring-diary.xyz">팀 프로젝트</a></li>
                         <!--<li><a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/infor}">개인정보</a></li>-->
 
 
