--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>일기장 프로그램</title>
+    <title>개발자 명친호 사이트입니다.</title>
 
     <!-- ✅ CSS (정적 리소스) -->
     <link rel="stylesheet" th:href="@{/index.css}">
